# avmcord

./: .gitignore  CMakeLists.txt
cmake/: FindDPP.cmake
include/: env.h  join.h  string_hash.h
src/: env.cpp  join.cpp  main.cpp
